# mr-lead-agent

./: .env.example  .gitignore  COMMERCIAL_LICENSE.md  README.md  pyproject.toml  review_rules.md
src/mr_lead_agent/: __init__.py  __main__.py  ast_extractor.py  config.py  gitlab_client.py  llm.py  llm_gemini.py  main.py  models.py  prompt_builder.py  redaction.py  renderer.py  repo_manager.py  retrieval.py
tests/: conftest.py  test_e2e.py  test_gitlab_client.py  test_llm_client.py  test_prompt_builder.py  test_redaction.py  test_renderer.py  test_retrieval.py
