[tool.poetry]
name = "mr-lead-agent"
version = "0.1.0"
description = "AI-powered GitLab MR code review agent — supports Gemini, DeepSeek, OpenRouter, Groq"
authors = ["Eugene M <ev1geniu@gmail.com>"]
license = "AGPL-3.0-only"
keywords = ["gitlab", "code-review", "ai", "llm", "deepseek", "gemini", "groq", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [{include = "mr_lead_agent", from = "src"}]

[tool.poetry.scripts]
review-mr = "mr_lead_agent.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
google-genai = "^0.8"
click = "^8.1"
pydantic = "^2.6"
pydantic-settings = "^2.2"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
respx = "^0.22.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]
ev1geniu@gmail.com

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
